# unofficial-spotify-api-rs

./: Cargo.toml  Makefile.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
