[package]
name = "unofficial-spotify-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1"

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.serde_json]
version = "*"

[dev-dependencies.tokio]
version = "1"
features = ["full"]
