[workspace]
members = [".", "./cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[package]
name = "unofficial-spotify-api"
version = { workspace = true }
edition = { workspace = true }

[dependencies.anyhow]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.serde_json]
version = "*"

[dev-dependencies.tokio]
version = "1"
features = ["full"]
